--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <div class="sidenav">
-      <a href="#matches">Matches</a>
-      <a href="#opponents">Opponents</a>
-    </div>
-    <div class="main">
-      <h2>Jiu Jitsu Journal</h2>
-    </div>
-  </body>
-</html> 
+<router-outlet></router-outlet>
