side nav now links to opponents page

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
 <div class="sidenav">
     <a href="#matches">Matches</a>
-    <a href="#opponents">Opponents</a>
+    <a href="/opponents">Opponents</a>
 </div>
