--- a/src/app/opponents/opponents-list/opponents-list.component.html
+++ b/src/app/opponents/opponents-list/opponents-list.component.html
@@ -20,6 +20,12 @@
               </tr>
             </tbody>
           </table>
+
+          <div class="button-box">
+            <button
+                (click)="navigateToCreateNewOpponent()" type="button" class="btn btn-success">Create New Opponent
+            </button>
+        </div>
     </div>
 </body>>
 
