--- a/src/app/matches/matches-list/matches-list.component.html
+++ b/src/app/matches/matches-list/matches-list.component.html
@@ -18,6 +18,12 @@
                 </tr>
             </tbody>
         </table>
+
+        <div class="button-box">
+            <button
+                (click)="navigateToCreateNewMatch()" type="button" class="btn btn-success">Create New Opponent
+            </button>
+        </div>
     </div>
 </body>>
 
